@startuml
interface Expression {
    +double evaluate(Map<String, Double> variables)
    +Set<String> getVariables()
    +void accept(ExpressionVisitor visitor)
}

class Variable {
    -String name
    +Variable(String name)
    +double evaluate(Map<String, Double> variables)
    +Set<String> getVariables()
    +void accept(ExpressionVisitor visitor)
}

class Constant {
    -double value
    +Constant(double value)
    +double evaluate(Map<String, Double> variables)
    +Set<String> getVariables()
    +void accept(ExpressionVisitor visitor)
}

abstract class BinaryOperation {
    -Expression left
    -Expression right
    +BinaryOperation(Expression left, Expression right)
    +double evaluate(Map<String, Double> variables)
    +Set<String> getVariables()
    +void accept(ExpressionVisitor visitor)
    +String getOperand()
}

class Addition {
    +Addition(Expression left, Expression right)
    +double evaluate(Map<String, Double> variables)
    +void accept(ExpressionVisitor visitor)
    +String getOperand()
}

class Subtraction {
    +Subtraction(Expression left, Expression right)
    +double evaluate(Map<String, Double> variables)
    +void accept(ExpressionVisitor visitor)
    +String getOperand()
}

class Multiplication {
    +Multiplication(Expression left, Expression right)
    +double evaluate(Map<String, Double> variables)
    +void accept(ExpressionVisitor visitor)
    +String getOperand()
}

class Division {
    +Division(Expression left, Expression right)
    +double evaluate(Map<String, Double> variables)
    +void accept(ExpressionVisitor visitor)
    +String getOperand()
}

class Exponentiation {
    +Exponentiation(Expression left, Expression right)
    +double evaluate(Map<String, Double> variables)
    +void accept(ExpressionVisitor visitor)
    +String getOperand()
}

class Modulo {
    +Modulo(Expression expression)
    +double evaluate(Map<String, Double> variables)
    +Set<String> getVariables(Map<String, Double> variables)
    +void accept(ExpressionVisitor visitor)
}

class SquareRoot {
    -Expression expression
    +SquareRoot(Expression operand)
    +double evaluate(Map<String, Double> variables)
    +Set<String> getVariables()
    +void accept(ExpressionVisitor visitor)
}

interface ExpressionVisitor {
    +void visit(Variable variable)
    +void visit(Constant constant)
    +void visit(Modulo modulo)
    +void visit(SquareRoot squareRoot)
    +void visit(BinaryOperation binaryOperation)
}

class VariableCollector {
    -Set<String> variables
    +void visit(Variable variable)
    +void visit(Constant constant)
    +void visit(Modulo modulo)
    +void visit(SquareRoot squareRoot)
    +void visit(BinaryOperation binaryOperation)
    +Set<String> getVariables()
}

class PrintVisitor {
    -Stringbuilder builder
    -int level
    +void visit(Variable variable)
    +void visit(Constant constant)
    +void visit(Modulo modulo)
    +void visit(SquareRoot squareRoot)
    +void visit(BinaryOperation binaryOperation)
}

class Printer {
    +String print(Expression expression)
}

Expression <|-- Variable
Expression <|-- Constant
Expression <|-- BinaryOperation
BinaryOperation <|-- Addition
BinaryOperation <|-- Subtraction
BinaryOperation <|-- Multiplication
BinaryOperation <|-- Division
BinaryOperation <|-- Exponentiation
Expression <|-- Modulo
Expression <|-- SquareRoot

Variable --> ExpressionVisitor : visit
Constant --> ExpressionVisitor : visit
Addition --> ExpressionVisitor : visit
Subtraction --> ExpressionVisitor : visit
Multiplication --> ExpressionVisitor : visit
Division --> ExpressionVisitor : visit
Exponentiation --> ExpressionVisitor : visit
Modulo --> ExpressionVisitor : visit
SquareRoot --> ExpressionVisitor : visit

ExpressionVisitor <|-- VariableCollector
ExpressionVisitor <|-- PrintVisitor

PrintVisitor <-- Printer : print
@enduml
